--- a/game/index.html
+++ b/game/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="main.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="game.css" media="screen">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -15,14 +15,11 @@
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
     </script>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="game.js" type="text/javascript"></script>
 
-    <title>Super Resizer by foolmoron | Ludum Dare 31</title>
+    <title><-[Super Resizer]-></title>
   </head>
   <body>
-    <div class="content">
-      <p class="launch-text">Launching Super Resizer in a popup in...</p>
-      <a href="#" id="countdown" class="countdown">5</a>
-    </div>
+    <canvas id="game" />
   </body>
 </html>
