--- a/game/index.html
+++ b/game/index.html
@@ -20,6 +20,7 @@
     <title><-[Super Resizer]-></title>
   </head>
   <body>
+    <div id="gameover">Hey you got <span id="currentscore">X</span>!<br><br>Best: <span id ="bestscore">Y</span></div>
     <canvas id="game" />
   </body>
 </html>
