--- a/game/index.html
+++ b/game/index.html
@@ -15,6 +15,7 @@
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
     </script>
+    <script src="../util.js" type="text/javascript"></script>
     <script src="game.js" type="text/javascript"></script>
 
     <title><-[Super Resizer]-></title>
