--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
     </script>
+    <script src="util.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 
     <title>Super Resizer by foolmoron | Ludum Dare 31</title>
