--- a/game/index.html
+++ b/game/index.html
@@ -16,6 +16,7 @@
       ga('send', 'pageview');
     </script>
     <script src="../util.js" type="text/javascript"></script>
+    <script src="titlescript.js" type="text/javascript"></script>
     <script src="game.js" type="text/javascript"></script>
 
     <title><-[Super Resizer]-></title>
