--- a/game/index.html
+++ b/game/index.html
@@ -15,6 +15,8 @@
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
     </script>
+    <script src="../howler/howler.js" type="text/javascript"></script>
+    <script src="audio.js" type="text/javascript"></script>
     <script src="../util.js" type="text/javascript"></script>
     <script src="titlescript.js" type="text/javascript"></script>
     <script src="game.js" type="text/javascript"></script>
