Better end screen

--- a/game/index.html
+++ b/game/index.html
@@ -24,7 +24,7 @@
     <title><-[Super Resizer]-></title>
   </head>
   <body>
-    <div id="gameover">Hey you got <span id="currentscore">X</span>!<br><br>Best: <span id ="bestscore">Y</span></div>
+    <div id="gameover">GAME OVER!<br><br>You scored <span id="currentscore">X</span> points!<br><br>Best: <span id ="bestscore">Y</span></div>
     <canvas id="game" />
   </body>
 </html>
