Main page presentation

--- a/index.html
+++ b/index.html
@@ -22,8 +22,26 @@
   </head>
   <body>
     <div class="content">
+      <img class="logo" src="logo.gif" />
+      <p>by <a href="https://twitter.com/foolmoron">@foolmoron<br>for <a href="">Ludum Dare 31</a><br>with <a href="http://rvagamejams.com/">RVA Game Jams</a></p>
+      <div class="warning">WARNING: Super Resizer launches a popup in your browser and does a lot of crazy stuff with it! Please ALLOW THE POPUP and don't worry if the popup starts moving around, IT'S NOT A VIRUS! Thanks for playing!</div>
       <p class="launch-text">Launching Super Resizer in a popup in...</p>
-      <a href="#" id="countdown" class="countdown">5</a>
+      <a href="#" id="countdown" class="countdown">15</a>
+      </p>(click to launch immediately)</p>
+      <div class="instructions">
+        Tips:<br>
+        <b>Use Chrome!</b> Firefox should be fine too. IE doesn't work!<br>
+        Resize the popup to move around<br>
+        Move the popup to give yourself space<br>
+        Watch out for the dangerous maximize and close browser buttons<br>
+        Use browser/OS shortcuts for maximum skill (Alt+Tab is your friend)<br>
+        The game is balanced for 1920x1080, but maybe you can get an advantage with other resolutions?<br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      </div>
     </div>
   </body>
 </html>
