--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="content">
       <img class="logo" src="logo.gif" />
       <p>by <a href="https://twitter.com/foolmoron">@foolmoron<br>for <a href="">Ludum Dare 31</a><br>with <a href="http://rvagamejams.com/">RVA Game Jams</a></p>
-      <div class="warning">WARNING: Super Resizer launches a popup in your browser and does a lot of crazy stuff with it! Please ALLOW THE POPUP and don't worry if the popup starts moving around, IT'S NOT A VIRUS! Thanks for playing!</div>
+      <div class="warning"><b>WARNING:</b><br>Super Resizer launches a popup in your browser and does a lot of crazy stuff with it! Please ALLOW THE POPUP and don't worry if the popup starts moving around, IT'S NOT A VIRUS! Thanks for playing!</div>
       <p class="launch-text">Launching Super Resizer in a popup in...</p>
       <a href="#" id="countdown" class="countdown">15</a>
       </p>(click to launch immediately)</p>
