--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         Resize the popup to move around<br>
         Move the popup to give yourself space<br>
         Watch out for the dangerous maximize and close browser buttons<br>
+        You lose energy when you resize the screen. When your energy runs out, it's game over!<br>
         Use browser/OS shortcuts for maximum skill (Alt+Tab is your friend)<br>
         The game is balanced for 1920x1080, but maybe you can get an advantage with other resolutions?<br>
         <br>
