--- a/game/index.html
+++ b/game/index.html
@@ -15,11 +15,11 @@
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
     </script>
-    <script src="../howler/howler.js" type="text/javascript"></script>
-    <script src="audio.js" type="text/javascript"></script>
-    <script src="../util.js" type="text/javascript"></script>
-    <script src="titlescript.js" type="text/javascript"></script>
-    <script src="game.js" type="text/javascript"></script>
+    <script src="../howler/howler.js?v=2" type="text/javascript"></script>
+    <script src="audio.js?v=2" type="text/javascript"></script>
+    <script src="../util.js?v=2" type="text/javascript"></script>
+    <script src="titlescript.js?v=2" type="text/javascript"></script>
+    <script src="game.js?v=2" type="text/javascript"></script>
 
     <title><-[Super Resizer]-></title>
   </head>
