--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
     </script>
-    <script src="util.js" type="text/javascript"></script>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="util.js?v=2" type="text/javascript"></script>
+    <script src="main.js?v=2" type="text/javascript"></script>
 
     <title>Super Resizer by foolmoron | Ludum Dare 31</title>
   </head>
@@ -43,6 +43,7 @@
         <br>
         <br>
       </div>
+      <p><a href="https://github.com/foolmoron/SuperResizer">Source on GitHub!</a></p>
     </div>
   </body>
 </html>
