Safari-specific bug fixes, makes it at least playable...

--- a/game/index.html
+++ b/game/index.html
@@ -19,12 +19,13 @@
     <script src="audio.js?v=2" type="text/javascript"></script>
     <script src="../util.js?v=2" type="text/javascript"></script>
     <script src="titlescript.js?v=2" type="text/javascript"></script>
-    <script src="game.js?v=2" type="text/javascript"></script>
+    <script src="game.js?v=3" type="text/javascript"></script>
 
     <title><-[Super Resizer]-></title>
   </head>
   <body>
     <div id="gameover">GAME OVER!<br><br>You scored <span id="currentscore">X</span> points!<br><br>Best: <span id ="bestscore">Y</span></div>
+    <div id="safari">Please try Chrome if possible!<br>The game works, but isn't great on Safari!</div>
     <canvas id="game" />
   </body>
 </html>
