--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </p>(click to launch immediately)</p>
       <div class="instructions">
         Tips:<br>
-        <b>Use Chrome!</b> Firefox should be fine too. IE doesn't work!<br>
+        <b>Use Chrome!</b> Firefox should be fine too. Safari isn't great, but it works. IE doesn't work at all!<br>
         Resize the popup to move around<br>
         Move the popup to give yourself space<br>
         Watch out for the dangerous maximize and close browser buttons<br>
